[INJICERT-768] (#249)
* Redesign and add support for sd-jwt

* move to com.github.openjson

* sd-jwt dependency & merge

* Code and pom clean up

* Code clean up and draft support for SD-JWT

* [INJICERT-768]

refactored code with sd-jwt

Signed-off-by: Hitesh Jain <jainhitesh9998@gmail.com>

* Mosip 39047 - Commons cleanup (#250)

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

---------

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-40467 - Generate unique identity data for sunbird policy to avoid duplicate conflict (#251)

* MOSIP-40467

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-40467

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

---------

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* [Changes working in local]

Signed-off-by: Hitesh C <jainhitesh9998@gmail.com>

* [changes to fix build failure in api test rig]

Signed-off-by: Hitesh C <jainhitesh9998@gmail.com>

* added scijava repo for github multibase package

Signed-off-by: Hitesh C <jainhitesh9998@gmail.com>

* reverted changes in api test pom

Signed-off-by: Hitesh C <jainhitesh9998@gmail.com>

* MOSIP-39047 - Commons cleanup (#253)

* MOSIP-40467

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-40467

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-39047

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

---------

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-40516 - Fix the automation failures while running only the smoke test (#254)

* MOSIP-40467

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-40467

Signed-off-by: Nandhukumar <nandhukumare@