@@ -15,7 +15,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.certify</groupId>
 	<artifactId>certify-parent</artifactId>
-	<version>0.11.0-SNAPSHOT</version>
+	<version>0.12.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>certify</name>
 	<description>Parent project for MOSIP certify</description>
@@ -84,6 +84,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- maven -->
+		<maven.compiler.release>21</maven.compiler.release>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
@@ -112,7 +113,7 @@
 		<module>certify-core</module>
 		<module>certify-integration-api</module>
 	</modules>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -130,20 +131,21 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
-		</dependency>
+			<!--<version>1.18.30</version>  -->
+		</dependency> 
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.vaadin.external.google</groupId>
-			<artifactId>android-json</artifactId>
-			<version>0.0.20131108.vaadin1</version>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20241224</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -203,7 +205,7 @@
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
-						<version>${spring.boot.version}</version>
+						<!--<version>${spring.boot.version}</version>-->
 						<configuration>
 							<executable>true</executable>
 							<layout>ZIP</layout>
@@ -263,12 +265,20 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>
+        </profile>
 
 	</profiles>
 
 	<build>
 		<plugins>
+			<!-- <plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.version}</version> 
+				<configuration>
+					<mainClass>io.mosip.certify.CertifyServiceApplication</mainClass>
+				</configuration>
+        	</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -277,7 +287,7 @@
 					<skipTests>${skipTests}</skipTests>
 					<skip>false</skip>
 					<argLine>
-						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
+						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
@@ -401,16 +411,32 @@
 				<version>${maven.compiler.version}</version>
 				<configuration>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
-					<source>${maven.compiler.source}</source>
+					<release>${maven.compiler.target}</release>
+					<source>${maven.compiler.target}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.8.1</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>
+								${project.build.directory}/lib
+							</outputDirectory>
+							 <includeScope>provided</includeScope>
+							<excludeTransitive>true</excludeTransitive>
+							<!-- <excludeScope>compile</excludeScope> -->
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
